--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,6 @@ h1 {
 #gang-image {
     height: 900px;
     width: 100%;
-    background: url('../images/gang.jpg') no-repeat center;
-    background-size: 1072px;
+    background: url('../images/gang-smSize.jpg') no-repeat center;
+    background-size: 950px;
 }
