--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     border-bottom: 1px solid white;  /* states or highlights where the user is in the browser */
 }
 
-/* logo */
+/* logo styling */
 #logo {
     float: left;
     font-size: 350%;
@@ -36,14 +36,13 @@ h1 {
 }
 
 
-
 #menu, #logo {
     line-height: 90px;
 }
 
 #menu li {
     float: right;
-    list-style-type: none;
+    list-style-type: none;      /* eliminates any style to the font  */
     margin-right: 45px;
 }
 
@@ -53,14 +52,10 @@ h1 {
 }
 
 #menu a:hover {
-    border-bottom: 1px solid red;
+    border-bottom: 2px solid white;
 }
 
-.message {
-    font-family: 'Do Hyeon', sans-serif;
-    color: white;
-    text-align: center;
-}
+
 
 /* gang image */
 
@@ -85,6 +80,10 @@ h1 {
 #cover-text, #cover-text h2, #cover-text h3 {       /* change original background/styles */
     color: gold;
     background: none;        
+}
+
+#cover-text h2 {
+    text-decoration: underline;
 }
 
 #cover-text {
@@ -121,4 +120,33 @@ h1 {
     to{
         transform: scale(1.3);
     }
+}
+
+
+/* styling message */
+
+.message {
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: x-large;
+    color: white;
+
+    text-align: center;
+    padding: 0 200px;
+    height: 120px;
+}
+
+/* styling legs */
+.leg-box {
+    font-size: medium;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: bisque;
+
+    height: 150px;
+    width: 250px;
+
+    padding: 20px;
+    border: solid 3px bisque;
+    display: inline-block;
+
+    position: relative;
 }
