--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ h1 {
     bottom: 350px;
     right: 365px;
     
+    
     position: absolute;
     /*z-index: auto;*/
         
@@ -149,4 +150,16 @@ h1 {
     display: inline-block;
 
     position: relative;
+}
+
+/* form */
+
+.text-input {
+    background: transparent;
+    color: white;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 2px solid white;
+    
 }
