--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,7 @@ h1 {
     
     
     position: absolute;
-    /*z-index: auto;*/
-        
+            
     animation: cover-zoom;      /* naming the animation */
     animation-duration: 3s;
     animation-fill-mode: forwards;
@@ -167,6 +166,12 @@ h1 {
 
 /* Styling Footer */
 
+h4 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    text-align: center;
+}
+
 footer {
     height: 150px;
     background-color: white;
@@ -200,4 +205,46 @@ footer {
 
 #photos > img {
     width: 90%;
+}
+
+
+/* Styling Shop Page */
+
+.shop {
+    font-size: 110%;
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 3px;
+    color: gold;
+    text-decoration: underline;
+    
+    text-align: center;
+    display: block;
+
+    clear: both;
+
+    height: 60px;
+    
+}
+
+.shop-box {
+    width: 300px;
+    /* height: 100%;*/
+}
+
+.left-piece {
+    overflow: hidden;
+    object-fit: contain;
+    padding: 10px;
+    border: 2px solid white;
+    margin: 0;
+    
+}
+
+.right-piece {
+    overflow: hidden;
+    object-fit: contain;
+    padding: 10px;
+    border: 2px solid white;
+    margin: 0;
+    position: relative;
 }
