--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 #menu a:hover {
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid rgb(233, 233, 212);
 }
 
 
@@ -283,6 +283,20 @@ footer {
     padding: 0.5rem;
 }
 
+/* Styling Map Section */
 
+#style-map {
+    margin: 0 auto;
+    width: 50%;
+}
 
+#style-map h2 {
+    font-family: 'Do Hyeon', sans-serif;
+    text-align: center;
+    color: gold;
+    
+    margin: 0 auto;
+    padding: 13px;
+    letter-spacing: 2px;
+}
 
