--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,17 +141,33 @@ h1 {
 .leg-box {
     font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: bisque;
+    text-align: center;
+    color: white;
 
-    height: 130px;
-    /*width: 80%;*/
+    height: 94px;
+    width: 30%;
 
-    margin: 0 auto;
+    margin: 1rem auto;
     padding: 15px;
-    border: solid 3px bisque;
-    display: inline-block;
-
+    border: ridge gold 5px;
+    
     position: relative;
+}
+
+.fa-ar-color {
+    color: rgb(24, 223, 17);
+}
+
+.fa-loc-color {
+    color: yellow;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.leg-box a:hover {
+    border: solid 3px white;
 }
 
 /* styling form */
@@ -162,7 +178,7 @@ h1 {
     width: 100%;
     height: 25px;
     margin: 15px auto;
-    border: 2px solid white;
+    border: 2px inset white;
     
 }
 
@@ -264,11 +280,12 @@ footer {
 /* Styling Form */
 
 .form {
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     margin: 60px auto;
     color: white;
     padding: 45px;
     max-width: 400px;
+    background-color: #3a3a3a;
 }
 
 .join-button {
@@ -281,6 +298,10 @@ footer {
     background-color: green;
     color: white;
     padding: 0.5rem;
+}
+
+.pad-leg {
+    padding-left: 3px;
 }
 
 /* Styling Map Section */
@@ -298,5 +319,20 @@ footer {
     margin: 0 auto;
     padding: 13px;
     letter-spacing: 2px;
+}
+
+
+/* media queries */
+
+/* for larger to medium screens size up to 1000px */
+
+@media screen and (max-width: 1000px) {
+    .message {
+        font-size: 100%;
+    }
+
+    #cover-text {
+        font-size: 100%;
+    }
 }
 
